--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t rishabh231/docker-react -f Dockerfile.dev .
+  - docker build -t rishabh231/Docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true rishabh231/docker-react npm run test
+  - docker run -e CI=true rishabh231/Docker-react npm run test
 
 # deploy:
 #   provider: elasticbeanstalk
